plugin ID should not contain 'jenkins'

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
-    <artifactId>qrebel-jenkins</artifactId>
+    <artifactId>qrebel</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
