--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/config.properties
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelBuilder/config.properties
@@ -7,4 +7,4 @@ DurationFail=Maximum allowed Slow Requests
 IOFail=Maximum allowed Excessive IO
 ExceptionFail=Maximum allowed Exceptions
 EntryPointFail=Watched entry points
-ServerUrl=QRebel server URL (https://hub.qrebel.com if empty)
+ServerUrl=QRebel server URL
