--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,11 @@
       <artifactId>httpclient</artifactId>
       <version>4.5.7</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>envinject</artifactId>
+      <version>2.1.6</version>
+    </dependency>
   </dependencies>
 
   <developers>
