Threshold to SLA global limit

--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/config.properties
@@ -2,7 +2,7 @@ Apikey=QRebel ApiKey
 ApplicationName=Application name
 TargetBuild=Target build
 BaselineBuild=Baseline build
-Threshold=Treshold limit (ms)
+Threshold=SLA global limit (ms)
 DurationFail=Maximum allowed Slow Requests
 IOFail=Maximum allowed Excessive IO
 ExceptionFail=Maximum allowed Exceptions
