REST changes - target comes independently

--- a/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/io/jenkins/plugins/qrebel/QRebelPublisher/config.properties
@@ -1,7 +1,7 @@
 Apikey=QRebel ApiKey
 ApplicationName=Application name
-BuildName=Build name
-BuildVersion=Build version
+Build=Build name
+Version=Build version
 Threshold=SLA global limit (ms)
 DurationFail=Maximum allowed Slow Requests
 IOFail=Maximum allowed Excessive IO
