--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
@@ -2,9 +2,9 @@ Apikey=QRebel ApiKey
 ApplicationName=Application name
 Build=Build name
 Version=Build version
-Threshold=SLA global limit (ms)
-DurationFail=Maximum allowed Slow Requests
-IOFail=Maximum allowed Excessive IO
-ExceptionFail=Maximum allowed Exceptions
+slaGlobalLimit=SLA global limit (ms)
+slowRequestsAllowed=Maximum allowed Slow Requests
+excessiveIoAllowed=Maximum allowed Excessive IO
+exceptionsAllowed=Maximum allowed Exceptions
 EntryPointFail=Watched entry points
 ServerUrl=QRebel server URL
