select comparison strategy

--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
@@ -8,3 +8,18 @@ excessiveIoAllowed=Maximum allowed Excessive IO
 exceptionsAllowed=Maximum allowed Exceptions
 EntryPointFail=Watched entry points
 ServerUrl=QRebel server URL
+
+ApplicationConnection=Server
+TargetBuild=Target build
+
+PerformanceGateSettings=Performance Gate Settings
+
+ComparisonStrategy=Comparison strategy
+StrategyBaseline=Compare with a baseline build
+StrategyDefaultBaseline=Compare with the default baseline
+StrategyThreshold=Compare with the static threshold
+
+IssueTypes=Detect issue types
+SlowRequests=Slow requests
+Io=Excessive IO
+Exceptions=Exceptions
