issue types filter to ui

--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
@@ -19,7 +19,7 @@ StrategyBaseline=Compare with a baseline build
 StrategyDefaultBaseline=Compare with the default baseline
 StrategyThreshold=Compare with the static threshold
 
-IssueTypes=Detect issue types
+IssueTypes=Monitor issue types
 SlowRequests=Slow requests
-Io=Excessive IO
+ExcessiveIo=Excessive IO
 Exceptions=Exceptions
