Test connection button

--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
@@ -23,3 +23,6 @@ IssueTypes=Monitor issue types
 SlowRequests=Slow requests
 ExcessiveIo=Excessive IO
 Exceptions=Exceptions
+
+TestConnection=Test connection
+Testing=Testing...
