--- a/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
+++ b/src/main/resources/org/zeroturnaround/jenkins/plugin/qrebel/QRebelPublisher/config.properties
@@ -17,7 +17,7 @@ PerformanceGateSettings=Performance Gate Settings
 ComparisonStrategy=Comparison strategy
 StrategyBaseline=Compare against a baseline build
 StrategyDefaultBaseline=Compare against the build set as the default baseline
-StrategyThreshold=Do not compare to a build. Use the global static threshold
+StrategyThreshold=Compare against the static threshold
 
 IssueTypes=Monitor issue types
 SlowRequests=Slow requests
