--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <relativePath/>
   </parent>
   <artifactId>qrebel</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>hpi</packaging>
   <properties>
     <jenkins.version>2.150.3</jenkins.version>
