--- a/pom.xml
+++ b/pom.xml
@@ -80,8 +80,8 @@
     </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>envinject</artifactId>
-      <version>2.1.6</version>
+      <artifactId>token-macro</artifactId>
+      <version>2.7</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
