--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <relativePath />
   </parent>
   <artifactId>qrebel</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <properties>
     <jenkins.version>2.150.3</jenkins.version>
@@ -113,7 +113,7 @@
     <connection>scm:git:git://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>1.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
   <repositories>
     <repository>
